[XENFIN-765] Autosize the treedropdown menu to contain the whole tree, ensure rerender of the dropdown menu when a treeselectnode is expanded/collapsed

--- a/src/metadata/property/treeselectbox.less
+++ b/src/metadata/property/treeselectbox.less
@@ -12,3 +12,10 @@
         }
     }
 }
+
+.react-checkbox-tree-single, .react-checkbox-tree-multiple {
+    width: inherit;
+    .rct-node {
+        overflow: hidden;
+    }
+}
